updated location of index.html in root folder

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Links</h1>
-        <h3><a href="QRCodeChallenge/index.html">Code Challenge</a></h3>
+        <h3><a href="FrontendMentorProjects/QRCodeChallenge/index.html">Code Challenge</a></h3>
     </body>
 </html>
