--- a/FrontendMentorProjects/QRCodeChallenge/index.html
+++ b/FrontendMentorProjects/QRCodeChallenge/index.html
@@ -9,14 +9,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+  <main>
     <div class="container-content">
       <img src="images/image-qr-code.png" alt="QR Code Image">
-      <p class="text-1">Improve your front-end skills by building projects</p>
-      <p class="text-2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      <h1 class="text-1">Improve your front-end skills by building projects</h1>
+      <h2 class="text-2">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</h2>
     </div>
-  <div class="attribution">
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Álvaro Dávila</a>.
-  </div>
+    Coded by <a href="https://github.com/adaviladev">Álvaro Dávila</a>.
+    </div>
+  </main>
 </body>
 </html>
