--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <h1>Links</h1>
-        <h3><a href="FrontendMentorProjects/QRCodeChallenge/index.html">Code Challenge</a></h3>
+        <h3><a href="FrontendMentorProjects/QRCodeChallenge/index.html">QR Code Challenge</a></h3>
+        <h3><a href="FrontendMentorProjects/SocialLinksPage/index.html">Social Links Challenge</a></h3>
     </body>
 </html>
