update alt text

--- a/FrontendMentorProjects/SocialLinksPage/index.html
+++ b/FrontendMentorProjects/SocialLinksPage/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <main>
-    <img src="assets/images/f8656029-edb0-423e-9209-58511da84a43.jpg">
+    <img src="assets/images/f8656029-edb0-423e-9209-58511da84a43.jpg" alt="photo-of-me">
     <h1>Álvaro Dávila</h1>
     <h2>Santiago, Chile</h2>
     <p>"Front-end developer and translator with a passion for languages."</p>
