--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
             passion for language continues to guide me, albeit on a new and exciting path.</p>
         <hr>
         <div class="link-background">
+            <h1><a href="#challenges">Portfolio</a></h1>
+            <p>Dedicated to creating meaningful digital experiences, my projects strive to blend technology and design, focusing on user needs above all else.  </p>
+        </div>
+        
+        <div class="link-background">
             <h1><a href="#challenges">Challenges</a></h1>
+            <p>Embracing the learning journey, my projects represent humble attempts at tackling coding challenges, aiming to grow through each obstacle and expand my skills.</p>
         </div>
         <p><a href="FrontendMentorProjects/QRCodeChallenge/index.html">QR Code Challenge</a></p>
         <p><a href="FrontendMentorProjects/SocialLinksPage/index.html">Social Links Challenge</a></p>
