--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>My GitHub Site</title>
+    <title>Adaviladev | Frontend Developer</title>
 </head>
 
 <body>
@@ -32,27 +32,42 @@
 
     <main>
         <div class="link-background">
-            <h1><a href="#about">About me</a></h1>
+            <!-- <h2><a href="#about">About me</a></h2> -->
         </div>
 
         <p class="bio-short">Started my career as a translator, learning languages to speak with people. Now I'm a
             frontend developer and I learn languages to speak with computers.</p>
-        <hr>
         <p>I embarked on my professional journey as a translator, immersing myself in the beauty of languages to bridge
             communication between diverse cultures. Now, I've transitioned into the dynamic world of frontend
             development, where I harness the power of programming languages to engage in a different form of dialogue –
             one with machines. Just as I once sought fluency to converse with people, I now master languages to
             articulate instructions and craft immersive digital experiences. It's a fascinating evolution, where my
             passion for language continues to guide me, albeit on a new and exciting path.</p>
-        <hr>
-        <div class="link-background">
-            <h1><a href="#challenges">Portfolio</a></h1>
-            <p>Dedicated to creating meaningful digital experiences, my projects strive to blend technology and design, focusing on user needs above all else.  </p>
-        </div>
         
+          <div class="space">
+
+          </div>  
+            <h2>Languages</h2>
+        <p class="skills">
+            HTML
+            CSS
+            JavaScript
+        </p>
+        <h2 class="software">Dev Tools</h2>
+        <p>
+            VsCode
+            GitHub
+        </p>
+
         <div class="link-background">
-            <h1><a href="#challenges">Challenges</a></h1>
-            <p>Embracing the learning journey, my projects represent humble attempts at tackling coding challenges, aiming to grow through each obstacle and expand my skills.</p>
+            <h2><a href="#challenges">Portfolio</a></h2>
+            <p>Dedicated to creating meaningful digital experiences, my projects strive to blend technology and design,
+                focusing on user needs above all else. </p>
+        </div>
+        <div class="link-background">
+            <h2><a href="#challenges">Challenges</a></h2>
+            <p>Embracing the learning journey, my projects represent humble attempts at tackling coding challenges,
+                aiming to grow through each obstacle and expand my skills.</p>
         </div>
         <p><a href="FrontendMentorProjects/QRCodeChallenge/index.html">QR Code Challenge</a></p>
         <p><a href="FrontendMentorProjects/SocialLinksPage/index.html">Social Links Challenge</a></p>
@@ -68,6 +83,7 @@
                 </select>
             </li>
         </ul>
+        <p><a href="mailto:alvarodaviladev@gmail.com">alvarodaviladev@gmail.com</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
