--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
                     <div class="social-center">
                         <div id="social-test">
                             <ul class="social">
-                                <li><i class="fa fa-instagram" aria-hidden="true"></i></li>
-                                <li><i class="fa fa-github" aria-hidden="true"></i></li>
+                                <li><a href="https://github.com/adaviladev"><i class="fa fa-github"
+                                            aria-hidden="true"></i></a></li>
+                                <li><a href="https://www.instagram.com/alvarodavila87"><i class="fa fa-instagram"
+                                            aria-hidden="true"></i></a></li>
+
                             </ul>
                         </div>
                     </div>
@@ -43,17 +46,17 @@
             one with machines. Just as I once sought fluency to converse with people, I now master languages to
             articulate instructions and craft immersive digital experiences. It's a fascinating evolution, where my
             passion for language continues to guide me, albeit on a new and exciting path.</p>
-        
-          <div class="space">
 
-          </div>  
-            <h2>Languages</h2>
+        <div class="space">
+
+        </div>
+        <h2><a href="#languages">Languages</a></h2>
         <p class="skills">
             HTML
             CSS
             JavaScript
         </p>
-        <h2 class="software">Dev Tools</h2>
+        <h2 class="software"><a href="#dev-tools">Dev Tools</a></h2>
         <p>
             VsCode
             GitHub
