--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+        <div class="big-container">
     <section id="hero">
 
         <div class="section-container-hero">
@@ -49,8 +50,16 @@
             <p>I speak Spanish, English and understand Portuguese and a little bit of Japanese.</p>
         </div>
     </section>
-    <section id="projects"></section>
-    <section id="contact"></section>
+            <section id="projects">
+                <div class="projects">
+                    <h2>Projects</h2>
+                </div>
+            </section>
+            <section id="contact">
+                <div class="Contact">
+                    <h2>Contact</h2>
+                </div>
+            </section>
 
     <footer>
         <p>&copy; 2024 Alvarodaviladev. All rights reserved.</p>
