--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adaviladev | Frontend Dev</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -13,54 +13,67 @@
         rel="stylesheet">
 
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#hero">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    <div class="wrapper">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
         <div class="big-container">
-    <section id="hero">
-
-        <div class="section-container-hero">
-            <h1>Álvaro Dávila</h1>
-            <h2>Frontend Developer</h2>
-            <p>I design responsive websites that seamlessly adapt and provide an optimal viewing experience across a
-                wide range of devices, including desktops, laptops, tablets, and smartphones.</p>
-        </div>
-    </section>
-    <section id="about">
-        <div class="section-container-about">
-            <h2>About me</h2>
-            <p>Started my career as a translator, learning languages to speak with people. Now I'm a frontend developer
-                and I learn languages to speak with computers.</p>
-            <p>Years ago, I embarked on a professional journey to become a translator, immersing myself in the beauty of
-                languages to bridge communication between diverse cultures. Now, I've transitioned into the dynamic
-                world of frontend development, where I harness the power of programming languages to engage in a
-                different form of dialogue – one with machines. Just as I once sought fluency to converse with people, I
-                now master languages to articulate instructions and craft immersive digital experiences. It's a
-                fascinating evolution, where my passion for language continues to guide me, albeit on a new and exciting
-                path.</p>
-            <p>I love listening to progressive rock/metal and I enjoy playing the guitar.</p>
-            <p>I have a cat who always reminds me that I should take a break from the screen from time to time.</p>
-            <p>I speak Spanish, English and understand Portuguese and a little bit of Japanese.</p>
-        </div>
-    </section>
+            <section id="hero">
+                <div class="section-container-hero">
+                    <h1>Álvaro Dávila</h1>
+                    <h2>Frontend Developer</h2>
+                    <p>I design responsive websites that seamlessly adapt and provide an optimal viewing experience
+                        across a
+                        wide range of devices, including desktops, laptops, tablets, and smartphones.</p>
+                </div>
+            </section>
+            <section id="about">
+                <div class="section-container-about">
+                    <h2>About me</h2>
+                    <p>Started my career as a translator, learning languages to speak with people. Now I'm a frontend
+                        developer
+                        and I learn languages to speak with computers.</p>
+                    <p>Years ago, I embarked on a professional journey to become a translator, immersing myself in the
+                        beauty of
+                        languages to bridge communication between diverse cultures. Now, I've transitioned into the
+                        dynamic
+                        world of frontend development, where I harness the power of programming languages to engage in a
+                        different form of dialogue – one with machines. Just as I once sought fluency to converse with
+                        people, I
+                        now master languages to articulate instructions and craft immersive digital experiences. It's a
+                        fascinating evolution, where my passion for language continues to guide me, albeit on a new and
+                        exciting
+                        path.</p>
+                    <p>I love listening to progressive rock/metal and I enjoy playing the guitar.</p>
+                    <p>I have a cat who always reminds me that I should take a break from the screen from time to time.
+                    </p>
+                    <p>I speak Spanish, English and understand Portuguese and a little bit of Japanese.</p>
+                </div>
+            </section>
             <section id="projects">
-                <div class="projects">
+                <div class="section-container-projects">
                     <h2>Projects</h2>
+                    <div class="top-projects">
+                        <div class="top-1">1</div>
+                        <div class="top-2">2</div>
+                        <div class="top-3">3</div>
+                    </div>
                 </div>
             </section>
             <section id="contact">
-                <div class="Contact">
+                <div class="section-container-contact">
                     <h2>Contact</h2>
                 </div>
             </section>
-
+        </div>
+    </div>
     <footer>
         <p>&copy; 2024 Alvarodaviladev. All rights reserved.</p>
     </footer>
