--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </header>
         <div class="big-container">
             <section id="hero">
-                <div class="section-container-hero">
+                <div class="section-container-hero" id="hero-img-container">
                     <h1>Álvaro Dávila</h1>
                     <h2>Frontend Developer</h2>
                     <p>I design responsive websites that seamlessly adapt and provide an optimal viewing experience
@@ -77,6 +77,7 @@
     <footer>
         <p>&copy; 2024 Alvarodaviladev. All rights reserved.</p>
     </footer>
+<script src="script.js"></script>
 </body>
 
 </html>
