--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <h2>About me</h2>
                     <p>Started my career as a translator, learning languages to speak with people. Now I'm a frontend
                         developer
-                        and I learn languages to speak with computers.</p>
+                        and I learn languages to speak with computers.</p><br>
                     <p>Years ago, I embarked on a professional journey to become a translator, immersing myself in the
                         beauty of
                         languages to bridge communication between diverse cultures. Now, I've transitioned into the
@@ -50,26 +50,35 @@
                         now master languages to articulate instructions and craft immersive digital experiences. It's a
                         fascinating evolution, where my passion for language continues to guide me, albeit on a new and
                         exciting
-                        path.</p>
-                    <p>I love listening to progressive rock/metal and I enjoy playing the guitar.</p>
+                        path.</p><br>
+                    <p>I love listening to progressive rock/metal and I enjoy playing the guitar.</p><br>
                     <p>I have a cat who always reminds me that I should take a break from the screen from time to time.
-                    </p>
-                    <p>I speak Spanish, English and understand Portuguese and a little bit of Japanese.</p>
+                    </p><br>
+                    <p>I speak Spanish, English and understand Portuguese and a little bit of Japanese.</p><br>
                 </div>
             </section>
             <section id="projects">
                 <div class="section-container-projects">
-                    <h2>Projects</h2>
+                    <h2>Projects</h2><br>
                     <div class="top-projects">
-                        <div class="top-1">1</div>
-                        <div class="top-2">2</div>
-                        <div class="top-3">3</div>
+                        <div class="top top-1">1</div>
+                        <div class="top top-2">2</div>
+                        <div class="top top-3">3</div>
                     </div>
                 </div>
             </section>
             <section id="contact">
                 <div class="section-container-contact">
                     <h2>Contact</h2>
+                    <form action="submit.php" method="POST">
+                        <label for="name">Name:</label>
+                        <input type="text" name="name" id="name" required>
+                        <label for="email">Email:</label>
+                        <input type="email" id="email" name="email" required>
+                        <label for="message">Message:</label>
+                        <textarea id="message" name="message" rows="4" cols="10" required></textarea>
+                        <button type="submit">Send Message</button>
+                    </form>
                 </div>
             </section>
         </div>
@@ -77,7 +86,7 @@
     <footer>
         <p>&copy; 2024 Alvarodaviladev. All rights reserved.</p>
     </footer>
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
