--- a/FrontendMentorProjects/03RecipePage/index.html
+++ b/FrontendMentorProjects/03RecipePage/index.html
@@ -10,32 +10,21 @@
   <link rel="stylesheet" href="styles/styles.css">
 
   <title>Frontend Mentor | Recipe page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
 
   <div class="content-container">
+    <img src="assets/images/image-omelette.jpeg" alt="Image of a delicious omelette!">
     <h1>Simple Omelette Recipe</h1>
     <p> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
       to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
     <div class="prep-time-container">
-      <h3>Peparation time</h3>
+      <h3>Preparation time</h3>
       <ul>
-        <li>Total: Approximately 10 minutes</li>
-        <li>Preparation: 5 minutes</li>
-        <li>Cooking: 5 minutes</li>
+        <li><strong>Total</strong>: Approximately 10 minutes</li>
+        <li><strong>Preparation</strong>: 5 minutes</li>
+        <li><strong>Cooking</strong>: 5 minutes</li>
       </ul>
     </div>
     <h2>Ingredients</h2>
@@ -45,7 +34,7 @@
       <li>Pepper, to taste</li>
       <li>1 tablespoon of butter or oil</li>
       <li>Optional fillings: cheese, diced vegetables, cooked meats, herbs</li>
-    </ul>
+    </ul><hr>
     <h2>Instructions</h2>
     <ol>
       <li><strong>Beat the eggs</strong>: In a bowl, beat the eggs with a pinch of salt and pepper until they are well
@@ -58,7 +47,7 @@
       <li><strong>Fold and serve</strong>: As the omelette continues to cook, carefully lift one edge and fold it over
         the fillings. Let it cook for another minute, then slide it onto a plate.</li>
       <li><strong>Enjoy</strong>: Serve hot, with additional salt and pepper if needed.</li>
-    </ol>
+    </ol><hr>
     <h2>Nutrition</h2>
     <p>The table below shows nutritional values per serving without the additional fillings.</p>
     <table>
