--- a/FrontendMentorProjects/03RecipePage/index.html
+++ b/FrontendMentorProjects/03RecipePage/index.html
@@ -20,7 +20,7 @@
       <p> An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
       <div class="prep-time-container">
-        <h3>Preparation time</h3>
+        <p>Preparation time</p>
         <ul>
           <li><strong>Total</strong>: Approximately 10 minutes</li>
           <li><strong>Preparation</strong>: 5 minutes</li>
