--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <footer>
         <p>&copy; 2024 Alvarodaviladev. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
