--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="#hero">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -61,9 +61,9 @@
                 <div class="section-container-projects">
                     <h2>Projects</h2><br>
                     <div class="top-projects">
-                        <div class="top top-1">1</div>
-                        <div class="top top-2">2</div>
-                        <div class="top top-3">3</div>
+                        <div class="top top-1">freeCodeCamp Projects</div>
+                        <div class="top top-2">Frontend Mentor Projects</div>
+                        <div class="top top-3">Personal Projects</div>
                     </div>
                 </div>
             </section>
