--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,27 @@
-Projects
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alvarodaviladev || Projects</title>
+    <link rel="stylesheet" href="styles/styles-projects.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="center-text">
+        <h1>My Work</h1><br>
+        <h2>I learned English to communicate with the world. Now, I work with design tools and programming languages to create amazing wesites</h2>
+        </div>
+    </main>
+</body>
+</html>
