--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,12 @@
         <div class="center-text">
         <h1>My Work</h1><br>
         <h2>I learned English to communicate with the world. Now, I work with design tools and programming languages to create amazing wesites</h2>
+        <div class="project-cards-container">
+            <div class="project-card 1">Project Card</div>
+            <div class="project-card 2">Project Card</div>
+            <div class="project-card 3">Project Card</div>
         </div>
+    </div>
     </main>
 </body>
 </html>
