--- a/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/18CertificationProjectCashRegister/index.html
+++ b/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/18CertificationProjectCashRegister/index.html
@@ -3,15 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Cash Register</title>
 </head>
 <body>
-    <p>Programming Pills, Price: $1.87 </p>
-    <label for="cash">Pay with $</label>
-    <input type="text" id="cash">
-    <p>Change Due (Vuelto)</p>
-    <div id="change-due">$</div>
+    <label for="cash">Cash:</label>
+    <input type="number" id="cash">
     <button id="purchase-btn">Purchase</button>
+
+    <h2>Change Due:</h2>
+    <div id="change-due"></div>
+
+    <h2>Current Change:</h2>
+    <div id="current-change"></div>
+
+    <h2>Price:</h2>
+    <p id="price"></p>
+
+    <h2>Total:</h2>
+    <p id="total"></p>
 <script src="script.js"></script>
 </body>
 </html>
