--- a/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/20CertificationPokemonSearchApp/index.html
+++ b/FreeCodeCampProjects/02JavaScriptAlgorithmsAndDataStructures(Beta)/20CertificationPokemonSearchApp/index.html
@@ -1,44 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Pokémon Search App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <main>
-        <h1>Pokémon Search App</h1>
-        <div class="app-container">
-            <input type="text" id="search-input" required>
-            <button id="search-button">Search</button>
+
+<body class="bg-warning">
+    <main >
+
+        <div class="app-container container position-absolute top-50 start-50 translate-middle">
+        <h1>Pokémon Search App</h1>            
+            <form role="search" id="search-form">
+                <label for="search-input">Search Pokémon by Name or ID: </label>
+                <input type="text" name="pokemon" id="search-input" required>
+                <button class="btn btn-light" id="search-button">Search</button>
+                <div class="buttons">
+                    <button class="btn btn-primary" id="search-button-random" type="button">Show a random Pokémon</button>
+                </div>
+            </form>
 
             <div class="identification">
                 <span id="pokemon-name">Name: </span>
                 <span id="pokemon-id">ID: </span>
             </div>
 
-            <div class="size">
+            <div class="type-and-size">
+
                 <span id="weight">Weight: </span>
                 <span id="height">Height: </span>
             </div>
 
-            <div class="types-and-sprite">
+            <div class="types-and-sprite ">
                 <span id="types">Type: </span>
-                <div class="sprite-container"></div>
+                <div class="sprite-container" id="sprite-container"></div>
+                <img src="images/International_Pokémon_logo.svg.png" alt="">
             </div>
 
             <div class="base-stats">
-                <span id="hp">HP: </span>
-                <span id="attack">Attack: </span>
-                <span id="defense">Defense: </span>
-                <span id="special-attack">Special Attack: </span>
-                <span id="special-defense">Special Defense: </span>
-                <span id="speed"></span>
+                <table class="border border-primary border-2 bg-success-subtle">
+                    <tr>
+                      <th>Base</th>
+                      <th>Stats</th>
+                    </tr>
+                    <tr>
+                      <td>HP:</td>
+                      <td id="hp"></td>
+                    </tr>
+                    <tr>
+                      <td>Attack:</td>
+                      <td id="attack"></td>
+                    </tr>
+                    <tr>
+                      <td>Defense:</td>
+                      <td id="defense"></td>
+                    </tr>
+                    <tr>
+                      <td>Sp. Attack:</td>
+                      <td id="special-attack"></td>
+                    </tr>
+                    <tr>
+                      <td>Sp. Defense:</td>
+                      <td id="special-defense"></td>
+                    </tr>
+                    <tr>
+                      <td>Speed:</td>
+                      <td id="speed" class="speed"></td>
+                    </tr>
+                  </table>
             </div>
-            
+
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+            crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </main>
 </body>
+
 </html>
